--- a/app/globals.css
+++ b/app/globals.css
@@ -56,17 +56,16 @@
     --gray-100: 240deg 6% 94%;
     --gray-50: 240deg 7% 97%;
 
-    --background: var(--gray-950); /** 950 */
+    --background: var(--gray-950);
 
-    --primary: var(--gray-200); /** 50 */
+    --primary: var(--gray-200);
     --primary-foreground: var(--gray-950);
 
     --foreground: var(--primary);
 
     --secondary: var(--gray-850);
-    --secondary-foreground: var(--primary); /** 50 */
+    --secondary-foreground: var(--primary);
 
-    /* For hsl(241 88% 74% / <alpha-value>) */
     --brand: 142.1 70.6% 45.3%;
     --brand-foreground: var(--gray-950);
 
@@ -77,20 +76,20 @@
     --brand-900: 249 46% 34%;
     --brand-950: 250 47% 20%;
 
-    --muted: var(--gray-600); /** 600 */
-    --muted-foreground: var(--gray-400); /** 400 */
+    --muted: var(--gray-600);
+    --muted-foreground: var(--gray-400);
 
-    --popover: var(--gray-950); /** 950*/
+    --popover: var(--gray-950);
     --popover-foreground: var(--primary);
 
-    --card: var(--gray-900); /** 950 */
+    --card: var(--gray-900);
     --card-foreground: var(--primary);
 
-    --border: var(--gray-800); /** 800 */
+    --border: var(--gray-800);
     --input: var(--secondary);
 
-    --accent: var(--gray-800); /** 800 */
-    --accent-foreground: var(--primary); /** 50 */
+    --accent: var(--gray-800);
+    --accent-foreground: var(--primary);
 
     --destructive: 0 72.2% 50.6%;
     --destructive-foreground: var(--primary);
@@ -188,9 +187,6 @@ ul {
   content: attr(placeholder);
   color: hsl(var(--muted));
   pointer-events: none;
-  /* position: absolute; */
-  /* left: 0.25rem; */
-  /* top: 10px; */
 }
 
 [contentEditable] {
